# sequel

./: .gitignore  Makefile  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sequel/: MainActivity.kt
apps/SequelApp/: pubspec.yaml
apps/SequelApp/android/app/src/main/kotlin/com/example/sequel/: MainActivity.kt
apps/SequelApp/ios/Runner/: Info.plist
apps/SequelApp/lib/: test.dart
apps/SequelApp/lib/core/errors/: exceptions.dart
apps/SequelApp/lib/core/network/: api_client.dart
apps/SequelApp/lib/core/routes/: app_router.dart
apps/SequelApp/lib/core/theme/: app_theme.dart
apps/SequelApp/lib/core/utils/: validators.dart
apps/SequelApp/lib/core/widgets/: costum_button.dart  custom_text_field.dart
apps/SequelApp/lib/features/auth/data/repositories/: auth_repository.dart  auth_repository_impl.dart
apps/SequelApp/lib/features/auth/presentation/widgets/: social_login_buttons.dart
apps/SequelApp/linux/: CMakeLists.txt
apps/SequelApp/macos/Runner.xcodeproj/: project.pbxproj
apps/backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py
apps/backend/app/api/v1/nlp/: __init__.py  keybert.py
apps/backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py
apps/backend/app/schemas/nlp/: __init__.py  base.py  keybert.py  text_types.py
apps/backend/app/services/keyword-extraction/: __init__.py
apps/backend/app/services/keyword-extraction/core/: __init__.py
apps/backend/app/services/keyword-extraction/schemas/: __init__.py
apps/backend/app/services/nlp/: __init__.py  base.py  keybert_service.py
apps/backend/app/services/testlogger/: Dockerfile  app.py
apps/backend/app/tasks/: celery_app.py
apps/backend/app/tasks/nlp/: keybert_tasks.py
apps/backend/app/tests/: __init__.py
apps/backend/gateway/: __init__.py
apps/backend/gateway/app/: Dockerfile  main.py  pyproject.toml
apps/backend/gateway/app/core/: config.py  middleware.py
apps/backend/gateway/app/routes/: proxy.py
apps/backend/gateway/app/services/: service_registry.py
apps/backend/monitoring/: docker-compose.yml  loki-config.yaml  promtail-config.yaml
apps/backend/monitoring/provisioning/datasources/: ds.yaml
apps/backend/services/keyword-extraction/: Dockerfile  pyproject.toml
apps/backend/services/keyword-extraction/app/: main.py
apps/backend/services/keyword-extraction/app/api/: __init__.py  endpoints.py
apps/backend/services/keyword-extraction/app/core/: __init__.py  config.py  extractor.py
apps/backend/services/keyword-extraction/app/schemas/: extraction.py
apps/backend/services/keyword-extraction/app/services/: __init__.py  keybert_service.py
apps/backend/services/keyword-extraction/core/: config.py
apps/backend/services/keyword-extraction/services/: __init__.py
apps/backend/shared/: pyproject.toml
apps/backend/shared/exceptions/: __init__.py  base.py
apps/backend/shared/schemas/: __init__.py  base.py  keybert.py
apps/flutter/lib/features/auth/data/models/: user_model.dart
apps/flutter/lib/features/auth/domain/entities/: user.dart
apps/flutter/lib/features/auth/domain/repositories/: auth_repository.dart
apps/flutter/lib/features/auth/domain/usecases/: signup_usecase.dart
apps/flutter/lib/features/auth/presentation/bloc/: auth_bloc.dart  auth_event.dart
apps/flutter/lib/l10n/: app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart
apps/flutter/windows/runner/: Runner.rc
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: injection_container.dart  main.dart
lib/core/errors/: failures.dart
lib/core/network/: network_info.dart
lib/features/auth/data/datasources/: auth_local_datasource.dart  auth_remote_datasource.dart
lib/features/auth/domain/usecases/: login_usecase.dart
lib/features/auth/presentation/bloc/: auth_bloc.dart  auth_state.dart
lib/features/auth/presentation/pages/: login_page.dart  signup_page.dart
lib/l10n/: app_en.arb
lib/lib/l10n/: app_de.arb
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
