[tool.poetry]
name = "sequel-gateway"
version = "1.0.0"
description = "API Gateway for Sequel microservices"
authors = ["Mika Tepe <mika.tepe@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = "^2.11.9"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"