[tool.poetry]
name = "keyword-extraction-service"
version = "1.0.0"
description = "Keyword extraction microservice using KeyBERT"
authors = ["Mika Tepe <mika.tepe@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = "^2.11.9"
pydantic-settings = "^2.1.0"

# KeyBERT stack
keybert = "^0.9.0"
sentence-transformers = "^5.1.1"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^0.21.1"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"